[gd_scene load_steps=5 format=2]

[ext_resource path="res://ParticleEffects/Menu/MainMenuEffect.tres" type="Material" id=1]
[ext_resource path="res://MainMenu/PlayerSelect.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Theme/MainTheme.tres" type="Theme" id=6]

[node name="PlayerSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 952, 1088 )
amount = 300
lifetime = 15.0
preprocess = 15.0
process_material = ExtResource( 1 )

[node name="MainMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
size_flags_vertical = 0
custom_constants/margin_right = 80
custom_constants/margin_top = 60
custom_constants/margin_left = 80
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginFit" type="MarginContainer" parent="MainMargins"]
margin_left = 80.0
margin_top = 60.0
margin_right = 1840.0
margin_bottom = 980.0

[node name="MainContent" type="VBoxContainer" parent="MainMargins/MarginFit"]
margin_right = 1760.0
margin_bottom = 920.0
custom_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="MainMargins/MarginFit/MainContent"]
margin_right = 1760.0
margin_bottom = 37.0
custom_constants/margin_right = 1646

[node name="BackButton" parent="MainMargins/MarginFit/MainContent/MarginContainer" instance=ExtResource( 4 )]
margin_left = 38.0
margin_right = 76.0
margin_bottom = 37.0
text = "<="

[node name="ButtonMargins" type="MarginContainer" parent="MainMargins/MarginFit/MainContent"]
margin_top = 67.0
margin_right = 1760.0
margin_bottom = 920.0
size_flags_vertical = 3

[node name="Buttons And Map" type="HBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins"]
margin_right = 1760.0
margin_bottom = 853.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProfile" type="VBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map"]
margin_right = 566.0
margin_bottom = 853.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile"]
margin_right = 566.0
margin_bottom = 501.0
custom_constants/margin_right = 150
custom_constants/margin_top = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer"]
margin_top = 200.0
margin_right = 416.0
margin_bottom = 501.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer"]
margin_right = 416.0
margin_bottom = 85.0
text = "Create New Profile
Name must be unique!"
align = 1

[node name="LineEdit" type="LineEdit" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 416.0
margin_bottom = 157.0
max_length = 12
placeholder_text = "Enter name here (Max 12)"

[node name="CreateProfile" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 69.0
margin_top = 192.0
margin_right = 347.0
margin_bottom = 229.0
text = "Create New Profile"

[node name="RemoveProfile" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 30.0
margin_top = 264.0
margin_right = 385.0
margin_bottom = 301.0
text = "Remove Selected Profile"

[node name="MainMenuButtons" type="VBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map"]
margin_left = 596.0
margin_right = 1163.0
margin_bottom = 853.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="SelectProfile" type="Label" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons"]
margin_right = 567.0
margin_bottom = 85.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.57
text = "Select Profile
Profile must be selected to play!"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons"]
margin_top = 115.0
margin_right = 567.0
margin_bottom = 786.0
size_flags_vertical = 3

[node name="ProfileList" type="ItemList" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons/MarginContainer"]
margin_right = 567.0
margin_bottom = 671.0
size_flags_vertical = 3
custom_constants/vseparation = 10
allow_reselect = true
fixed_column_width = 500
icon_mode = 0

[node name="PlayGame" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons" instance=ExtResource( 4 )]
margin_left = 205.0
margin_top = 816.0
margin_right = 361.0
margin_bottom = 853.0
text = "Play Game"

[node name="Profile Details" type="VBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map"]
margin_left = 1193.0
margin_right = 1760.0
margin_bottom = 853.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/Profile Details"]
margin_right = 567.0
margin_bottom = 333.0
custom_constants/margin_top = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/Profile Details/MarginContainer"]
margin_top = 200.0
margin_right = 567.0
margin_bottom = 333.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/Profile Details/MarginContainer/VBoxContainer"]
margin_right = 567.0
margin_bottom = 45.0
text = "Profile Details:"
align = 1
valign = 1

[node name="ProfileContent" type="RichTextLabel" parent="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/Profile Details/MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 567.0
margin_bottom = 133.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center][wave]No profile selected :("
text = "No profile selected :("
fit_content_height = true

[connection signal="pressed" from="MainMargins/MarginFit/MainContent/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer/CreateProfile" to="." method="_on_CreateProfile_pressed"]
[connection signal="pressed" from="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/NewProfile/MarginContainer/VBoxContainer/RemoveProfile" to="." method="_on_RemoveProfile_pressed"]
[connection signal="item_selected" from="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons/MarginContainer/ProfileList" to="." method="_on_ProfileList_item_selected"]
[connection signal="pressed" from="MainMargins/MarginFit/MainContent/ButtonMargins/Buttons And Map/MainMenuButtons/PlayGame" to="." method="_on_PlayGame_pressed"]
